# tone-aware-vocos

./: .gitignore  LICENSE  README.md  aggregate_tone_eval_shards.py  evaluate_tone_vocos.py  evaluate_tone_vocos_set.py  export_vocos_for_zipvoice.py  extract_tone_segments.py  prepare_manifest.py  prepare_mfa_corpus.py  pyproject.toml  requirements.txt  run_val_tone_eval.sh  synthesize.py  train.py  train_tone_classifier.py
configs/: smoke.yaml  vocos_mp3.yaml
configs/ablations/: baseline.yaml  (+3 more)
docs/: README_VALIDATION_RUNBOOK.md  README_tone_aware_vocos.md
eval/: bench_efficiency.py  ckpt_stability.py  cluster_boot.py  eval_external.py  eval_peritem.py  eval_utterance.py  make_fig_rtf.py  make_figures.py  make_graphical_abstract.py  stats_analysis.py
eval_reports/: tone_val_no_overlap_baseline_20k.json  tone_val_no_overlap_plus_c_20k.json  tone_val_no_overlap_plus_cb_20k.json  tone_val_no_overlap_plus_cba_20k.json
results/: ckpt_stability.json  efficiency.json  gpu.txt  per_tone_acc.tsv  per_tone_ci.tsv  per_tone_f0.tsv  real_acc.json  revision_stats.json  segment_stats.tsv  segment_summary.tsv  stratified_composition.json  tone_feature_distance.json  ttscond_tone.json  utterance_metrics_merged.tsv  utterance_stats.tsv  utterance_summary.tsv
tools/: create_manual_blind_pack.py  generate_zipvoice_vocoder_pairs.py  make_eaai_submission_package.py  make_single_listener_eval.py  make_zipvoice_eval40_tsv.py
vocos_train/: __init__.py  config.py  data.py  model.py  tone_classifier.py  tone_discriminator.py  tone_losses.py  trainer.py  vietnamese_tones.py
